@@ -8412,6 +8412,9 @@
 			not have META date tags will retain the last
 			modified date returned by the server or found
 			on the local file system.
+			As of version 3.1.6, in addition to META date
+			tags, htdig will also recognize dc.date,
+			dc.date.created and dc.date.modified.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -8797,7 +8800,7 @@
 	</dl>
 	<hr size="4" noshade>
 <!-- hhmts start -->
-Last modified: $Date: 2001/11/02 18:08:03 $
+Last modified: $Date: 2001/11/02 18:29:55 $
 <!-- hhmts end -->
   </body>
 </html>
