@@ -1,3 +1,8 @@
+Fri Nov  2 12:28:35 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/HTML.cc, htdoc/attrs.html: Added support for dc.date,
+	dc.date.created and dc.date.modified to use_doc_date handling.
+
 Fri Nov  2 12:12:59 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* contrib/xmlsearch.README, contrib/xmlsearch.tar.gz: Added files
